--- a/FamilyBudget/Views/Modal/AddIncome.cshtml
+++ b/FamilyBudget/Views/Modal/AddIncome.cshtml
@@ -30,6 +30,7 @@
           asp-route-projectmemberid="@Model.ProjectMemberId">
             <div class="modal-body container-fluid">
                 <div class="form-group">
+                    <label asp-for="ProjectMemberId" class="control-label"></label>
                     <select asp-for="ProjectMemberId" class="form-control" asp-items="@Model.ProjectMembers"></select>
                 </div>
                 <div class="form-group">
