--- a/FamilyBudget/Views/Home/Details.cshtml
+++ b/FamilyBudget/Views/Home/Details.cshtml
@@ -19,54 +19,59 @@
     <div id="addFinOpDialogContent" class="modal-dialog modal-dialog-centered"></div>
 </div>
 <div class="card">
-    <div class="card-header">
+    <div class="card-header pt-1 pb-1 pr-1">
         <div class="d-flex justify-content-between align-items-center">
-            <h3 class="flex-grow-1">@Model.ProjectName</h3>
+            <h3 class="flex-grow-1 mt-2">@Model.ProjectName</h3>
 
-            <a asp-controller="Modal" asp-action="AddIncome" asp-route-id="@Model.FilterViewModel.SelectedProject"
-               class="btn btn-warning addIncome m-2 align">Income <i class="bi bi-plus-lg"></i></a>
-            <a asp-controller="Modal" asp-action="AddCharge" asp-route-id="@Model.FilterViewModel.SelectedProject"
-               class="btn btn-info btn addCharge m-2 pull-right">Charge <i class="bi bi-plus-lg"></i></a>
+            <a asp-controller="Modal" asp-action="AddFinOperation" asp-route-id="@Model.FilterViewModel.SelectedProject" asp-route-type="@FinType.Income"
+               class="btn btn-warning addIncome m-1 align">
+                Добавить доход
+                <i class="bi bi-plus-lg"></i>
+            </a>
+            <a asp-controller="Modal" asp-action="AddFinOperation" asp-route-id="@Model.FilterViewModel.SelectedProject" asp-route-type="@FinType.Charge"
+               class="btn btn-info btn addCharge m-1 pull-right">
+                Добавить расход
+                <i class="bi bi-plus-lg"></i>
+            </a>
         </div>
 
     </div>
-    <div class="card-body">
+    <div class="card-body pt-2 pb-2">
         <form>
             <div class="row">
-                <div class="ml-2 mr-2">
-                    <label class="form-label">FinType:</label>
+                <div class="col-2 pr-1 pl-1">
+                    <label class="form-label mb-1 ml-1">Тип</label>
                     <select type="submit" class="form-control" name="finType"
                             asp-for="@Model.FilterViewModel.SelectedFinType"
                             asp-items="@Model.FilterViewModel.FinTypes"
                             onchange="this.form.submit()"></select>
                 </div>
 
-                <div class="mr-2">
-                    <label class="form-label">ProjectMember:</label>
+                <div class="col-2 pr-1 pl-1">
+                    <label class="form-label mb-1 ml-1">Член семьи</label>
                     <select type="submit" asp-for="@Model.FilterViewModel.SelectedProjectMember" class="form-control" name="projectMember"
                             asp-items="@Model.ProjectMembers" onchange="this.form.submit()"></select>
                 </div>
 
-                <div class="flex-grow-1">
-                    <label class="form-label">Category:</label>
-                    <input type="text" id="inputCategory" data-projectId="@Model.FilterViewModel.SelectedProject" autocomplete="off" placeholder="Category"
+                <div class="col-2 pr-1 pl-1">
+                    <label class="form-label mb-1 ml-1">Категория</label>
+                    <input type="text" id="inputCategory" data-projectId="@Model.FilterViewModel.SelectedProject" autocomplete="off" placeholder="категория"
                            class="form-control" name="category" value="@Model.FilterViewModel.SelectedCategory" />
                 </div>
 
-                <div class="ml-2">
-                    <label class="form-label">Start date:</label>
+                <div class="col-2 pr-1 pl-1">
+                    <label class="form-label mb-1 ml-1">Дата с</label>
                     <input class="form-control" name="beginDate" asp-for="@Model.FilterViewModel.SelectedBeginDate" type="date" onchange="this.form.submit()">
                 </div>
 
-                <div class="ml-2">
-                    <label class="form-label">End date:</label>
+                <div class="col-2 pr-1 pl-1">
+                    <label class="form-label mb-1 ml-1">Дата до</label>
                     <input class="form-control" name="endDate" asp-for="@Model.FilterViewModel.SelectedEndDate" type="date" onchange="this.form.submit()">
                 </div>
-                <div class="ml-2 mr-2">
-                    <label class="form-label">&nbsp;</label>
+                <div class="col-2 pr-1 pl-1">
+                    <label class="form-label mb-1 ml-1">&nbsp;</label>
                     <a href="@Model.FilterViewModel.SelectedProject" class="form-control btn btn-danger">
-                        clear
-                        <i class="bi bi-funnel"></i>
+                        Очистить фильтры
                     </a>
                 </div>
             </div>
@@ -74,34 +79,25 @@
     </div>
 </div>
 <div class="row">
-    @if (Model.FilterViewModel.SelectedFinType == FinType.Charge)
-    {
-        <div class="col-1"></div>
-        <div class="col-4">
-            <canvas id="PieByCategory"></canvas>
-        </div>
-        <div class="col-1"></div>
-        <div class="col-1"></div>
-        <div class="col-4">
-            <canvas id="PieByProjectMember"></canvas>
-        </div>
-        <div class="col-1"></div>
-    }
-    else if (Model.FilterViewModel.SelectedFinType == FinType.Income)
-    {
-        <div class="col-4"></div>
-        <div class="col-4">
-            <canvas id="PieByProjectMember"></canvas>
-        </div>
-        <div class="col-4"></div>
-    }
-    else
+    @if (Model.FilterViewModel.SelectedFinType == null)
     {
         <div class="col-4"></div>
         <div class="col-4">
             <canvas id="PieByFinOp"></canvas>
         </div>
         <div class="col-4"></div>
+    }
+    else
+    {
+        <div class="col-1"></div>
+        <div class="col-4">
+            <canvas id="PieByCategory"></canvas>
+        </div>
+        <div class="col-2"></div>
+        <div class="col-4">
+            <canvas id="PieByProjectMember"></canvas>
+        </div>
+        <div class="col-1"></div>
     }
 </div>
 <div class="card">
@@ -119,7 +115,7 @@
                        asp-route-sortmodel="@(FinOperationSortModelEnum.FinType)"
                        asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.FinType) ?
                                                 null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
-                            Type
+                            Тип
                             @if (@Model.SortViewModel.finTypeSort)
                             {
                                 <i class="bi @(Model.SortViewModel.isAscending ? "bi-sort-down" : "bi-sort-up")"></i>
@@ -136,7 +132,7 @@
                        asp-route-sortmodel="@(FinOperationSortModelEnum.ProjectMember)"
                        asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.ProjectMember) ?
                                                 null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
-                            Project member
+                            Член семьи
                             @if (@Model.SortViewModel.projectMemberSort)
                             {
                                 <i class="bi @(Model.SortViewModel.isAscending ? "bi-sort-alpha-down" : "bi-sort-alpha-up")"></i>
@@ -152,7 +148,7 @@
                        asp-route-sortmodel="@(FinOperationSortModelEnum.Category)"
                        asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.Category) ?
                                                 null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
-                            Category
+                            Категория
                             @if (@Model.SortViewModel.categorySort)
                             {
                                 <i class="bi @(Model.SortViewModel.isAscending ? "bi-sort-alpha-down" : "bi-sort-alpha-up")"></i>
@@ -168,7 +164,7 @@
                        asp-route-sortmodel="@(FinOperationSortModelEnum.Value)"
                        asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.Value) ?
                                                 null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
-                            Value
+                            Сумма
                             @if (@Model.SortViewModel.valueSort)
                             {
                                 <i class="bi @(Model.SortViewModel.isAscending ? "bi-sort-numeric-down" : "bi-sort-numeric-up")"></i>
@@ -184,7 +180,7 @@
                        asp-route-sortmodel="@(FinOperationSortModelEnum.CreateTime)"
                        asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.CreateTime) ?
                                                 null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
-                            Create time
+                            Дата
                             @if (@Model.SortViewModel.createTimeSort)
                             {
                                 <i class="bi @(Model.SortViewModel.isAscending ? "bi-sort-numeric-down" : "bi-sort-numeric-up")"></i>
@@ -252,7 +248,7 @@
         </table>
 
 
-        <ul class="pagination justify-content-center">
+        <ul class="pagination justify-content-center mb-2">
             <li class="page-item @(!Model.PageViewModel.HasPreviousPage ? "disabled" : "")">
                 <a asp-action="Details"
                asp-route-id="@(Model.FilterViewModel.SelectedProject)"
@@ -262,7 +258,7 @@
                asp-route-sortmodel="@(Model.SortViewModel.CurrentSortModel)"
                asp-route-sortdir="@(Model.SortViewModel.CurrentSortDir)"
                class="page-link">
-                    Previous
+                    Назад
                 </a>
             </li>
             <li class="page-item @(!Model.PageViewModel.HasNextPage ? "disabled" : "")">
@@ -274,7 +270,7 @@
                asp-route-sortmodel="@(Model.SortViewModel.CurrentSortModel)"
                asp-route-sortdir="@(Model.SortViewModel.CurrentSortDir)"
                class="page-link">
-                    Next
+                    Вперед
                 </a>
             </li>
         </ul>
@@ -327,7 +323,7 @@
                     },
                     title: {
                         display: true,
-                        text: 'Grouped by category'
+                        text: 'Сгруппировано по категории'
                     }
                 }
             },
@@ -363,7 +359,7 @@
                     },
                     title: {
                         display: true,
-                        text: 'Grouped by project member'
+                        text: 'Сгруппировано по члену семьи'
                     }
                 }
             },
@@ -398,7 +394,7 @@
                     },
                     title: {
                         display: true,
-                        text: 'Grouped by financial operation'
+                        text: 'Сгруппировано по типу финансовой операции'
                     }
                 }
             },
