--- a/FamilyBudget/Views/Modal/FinOperationDelete.cshtml
+++ b/FamilyBudget/Views/Modal/FinOperationDelete.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="modal-content">
-    <div class="modal-header">
+    <div class="modal-header pb-2">
         @if (@Model.IsNotFound)
         {
             <h3 class="modal-title text-danger">This finoperation is not found.</h3>
@@ -16,7 +16,7 @@
         }
         else
         {
-            <h3 class="modal-title">Are you sure you want to delete this finoperation?</h3>
+            <h4 class="modal-title">Вы уверены, что хотите удалить эту финансовую операцию?</h4>
         }
 
         <button class="bi bi-x-lg btn" data-dismiss="modal" aria-label="Close"></button>
@@ -24,56 +24,53 @@
     @if (Model.IsValid)
     {
         <div class="modal-body container-fluid">
-        <dl class="row">
-            <dt class = "col-sm-4">
-                @Html.DisplayNameFor(model => model.FinType)
-            </dt>
-            <dd class = "col-sm-8">
-                @Html.DisplayFor(model => model.FinType)
-            </dd>
-            <dt class = "col-sm-4">
-                @Html.DisplayNameFor(model => model.Value)
-            </dt>
-            <dd class = "col-sm-8">
-                @Html.DisplayFor(model => model.Value)
-            </dd>
-            @if (Model.FinType == FinType.Charge)
-            {
-                <dt class = "col-sm-4">
+            <dl class="row mb-0">
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.FinType)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.FinType)
+                </dd>
+                <dt class="col-sm-4">
                     @Html.DisplayNameFor(model => model.Category)
                 </dt>
-                <dd class = "col-sm-8">
+                <dd class="col-sm-8">
                     @Html.DisplayFor(model => model.Category.Name)
-                </dd class>
-            }
-            <dt class = "col-sm-4">
-                @Html.DisplayNameFor(model => model.ProjectMember)
-            </dt>
-            <dd class = "col-sm-8">
-                @Html.DisplayFor(model => model.ProjectMember.NameInProject)
-            </dd class>
-            <dt class = "col-sm-4">
-                @Html.DisplayNameFor(model => model.CreateTime)
-            </dt>
-            <dd class = "col-sm-8">
-                @Html.DisplayFor(model => model.CreateTime)
-            </dd>
-            <dt class = "col-sm-4">
-                @Html.DisplayNameFor(model => model.UpdateTime)
-            </dt>
-            <dd class = "col-sm-8">
-                @Html.DisplayFor(model => model.UpdateTime)
-            </dd>
-        </dl>
+                </dd>
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.ProjectMember)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.ProjectMember.NameInProject)
+                </dd>
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.Value)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.Value)
+                </dd>
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.CreateTime)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.CreateTime)
+                </dd>
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.UpdateTime)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.UpdateTime)
+                </dd>
+            </dl>
         </div>
      }
-     <div class="modal-footer">
-         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+     <div class="modal-footer p-2">
+         <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
          @if (Model.IsValid)
          {
              <form asp-area="" asp-controller="FinOperations" asp-action="Delete">
                  <input type="hidden" asp-for="Id" />
-                 <input type="submit" value="Delete" class="btn btn-danger btn-ok" />
+                 <input type="submit" value="Удалить" class="btn btn-danger btn-ok" />
              </form>
          }
      </div>
