--- a/FamilyBudget/Views/Home/Index.cshtml
+++ b/FamilyBudget/Views/Home/Index.cshtml
@@ -5,11 +5,11 @@
 }
 
 <div id="projectDeleteModal" class="modal fade">
-    <div id="projectDeleteDialogContent" class="modal-dialog modal-dialog-centered modal-lg"></div>
+    <div id="projectDeleteDialogContent" class="modal-dialog modal-dialog-centered"></div>
 </div>
 
 <div id="projectCreateModal" class="modal fade">
-    <div id="projectCreateDialogContent" class="modal-dialog modal-dialog-centered modal-lg"></div>
+    <div id="projectCreateDialogContent" class="modal-dialog modal-dialog-centered"></div>
 </div>
 
 
@@ -17,8 +17,8 @@
 {
     <p>
         <button type="button" class="btn btn-success btn-lg btn-block projectCreate">
-            <i class="bi bi-plus-circle"></i>
-            Create new project
+            <i class="bi bi-pencil-square mr-1"></i>
+            Добавить проект
         </button>
     </p>
 }
@@ -26,8 +26,8 @@ else
 {
     <p>
         <button type="button" class="btn btn-success projectCreate">
-            <i class="bi bi-plus-circle"></i>
-            Create new project
+            <i class="bi bi-pencil-square mr-1"></i>
+            Добавить проект
         </button>
     </p>
 }
