--- a/FamilyBudget/Views/Modal/AddFinOperation.cshtml
+++ b/FamilyBudget/Views/Modal/AddFinOperation.cshtml
@@ -61,8 +61,8 @@
     }
     else
     {
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <div class="modal-footer p-2">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
         </div>
     }
 </div>
