--- a/FamilyBudget/Views/Home/Edit.cshtml
+++ b/FamilyBudget/Views/Home/Edit.cshtml
@@ -3,40 +3,6 @@
 @{
     ViewData["Title"] = "Edit";
 }
-@*
-<h2>Добавление книг</h2>
-
-<form asp-controller="Projects" asp-action="Edit">
-    <div id="booksBlock">
-        <div class='bookItem'>
-            <h4>Книга № 1</h4>
-            <div>
-                <label>Название</label>
-                <div>
-                    <input asp-for="categories[0].Name" />
-                </div>
-            </div>
-        </div>
-    </div>
-    <a class="addLink">Добавить новый элемент</a>
-    <p><input type="submit" value="Добавить" /></p>
-</form>
-
-@section scripts {
-    <script>
-
-    $(function () {
-    var i = 0;
-    $('.addLink').click(function()
-    {
-    i++;
-    let html2Add= `<input type="text"
-    id="categories_${i}" name="categories[${i}].Name" />  `;
-    $('#booksBlock').append(html2Add);
-    })
-    })
-    </script>
-    }*@
 
 <h1>Edit</h1>
 
@@ -46,47 +12,51 @@
             <div class="form-group">
                 <label asp-for="@Model.project.Name" class="control-label"></label>
                 <input asp-for="@Model.project.Name" class="form-control" placeholder="Project name" />
+                <input type="hidden" asp-for="@Model.project.Id" />
+                <input type="hidden" asp-for="@Model.project.OwnerId" />
                 <span asp-validation-for="@Model.project.Name" class="text-danger"></span>
             </div>
 
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-4">
                     <h4 class="text-center">Categories</h4>
                     <a class="addCategory pull-right bi bi-plus-circle" style="cursor: pointer"></a>
 
-                    <div id="categoryList" class="list-group">
+                    <div id="categoryList" class="list-group" count="@Model.categories.Count">
                         @for (var i = 0; i < Model.categories.Count; i++)
                         {
-
-                            <div id="@Model.categories[i].Id">
-                                <a id="category_@Model.categories[i].Id" categoryId="@Model.categories[i].Id" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-                                    <span class="flex-grow-1 list-group-item-action">
-                                        <input asp-for="@Model.categories[i].Name" class="form-control"/>
+                             <div id="category_@i" class="list-group-item list-group-item-action">
+                                 <div class="row justify-content-between align-items-center">
+                                    <span  class="col-sm-11">
+                                        <input id="cetagoryId_@i" asp-for="@Model.categories[i].Id" type="hidden"/>
+                                        <input id="categoryName_@i" asp-for="@Model.categories[i].Name" class="form-control"/>
                                     </span>
 
-                                    <i id="#deleteCategory_@Model.categories[i].Id" class="categoryDelete bi bi-x-lg ml-3" style="cursor: pointer"></i>
-                                </a>
-                            </div>
+                                    <i id="@i" class="categoryDelete bi bi-x-lg mr-2" style="cursor: pointer"></i>
+                                 </div>
+                             </div>
                         }
                     </div>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-8">
                     <h4 class="text-center">ProjectMembers</h4>
                     <a class="addProjectMember pull-right bi bi-plus-circle" style="cursor: pointer"></a>
-                    <div id="projectMemberList" class="list-group">
+
+                    <div id="projectMemberList" class="list-group" count="@Model.categories.Count">
 
                         @for (var i = 0; i < Model.projectMembers.Count; i++)
                         {
-                            <div id="@Model.projectMembers[i].Id">
-                                <a id="projectMember-@Model.projectMembers[i].Id" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-                                    <span class="flex-grow-1 row ">
-                                        <input asp-for="@Model.projectMembers[i].NameInProject" class="form-control col-lg-5 mr-2" value="@Model.projectMembers[i].NameInProject" />
-                                        <input asp-for="@Model.projectMembers[i].User.Email" class="form-control col-lg-6" value="@Model.projectMembers[i].User.Email" />
-                                    </span>
+                             <div id="projectMember_@i" class="list-group-item list-group-item-action">
+                                 <div class="row justify-content-between align-items-center">
 
-                                    <i id="@Model.projectMembers[i].Id" class="projectMemberDelete bi bi-x-lg ml-3" style="cursor: pointer"></i>
-                                </a>
-                            </div>
+                                     <input id="projectMemberId_@i" asp-for="@Model.projectMembers[i].Id" type="hidden"/>
+                                     <input asp-for="@Model.projectMembers[i].NameInProject" class="form-control col-sm-5 ml-3 mr-2" value="@Model.projectMembers[i].NameInProject" />
+                                     <input asp-for="@Model.projectMembers[i].User.Email" class="form-control col-sm-5 mr-2" value="@Model.projectMembers[i].User.Email" />
+
+                             
+                                 <i id="@i" class="projectMemberDelete bi bi-x-lg mr-2" style="cursor: pointer"></i>
+                                 </div>
+                             </div>
                         }
                     </div>
                 </div>
@@ -102,80 +72,108 @@
 @section scripts
     {
 <script type="text/javascript">
-
-    const randomId = () => {
-    return Math.random().toString(36).substring(2, 15) + Math.random().toString(36).substring(2, 15);
-    };
     
-    const generateCategory = (id,name) => {
-    return `
-    <a id="category_${id}" categoryId="${id}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-    <span class="flex-grow-1 list-group-item-action">
-    <input type="text" class="form-control" id="categories_${id}" name="categories[${id}].Name" value="${name}" /> 
-    </span>
-
-    <i id="deleteCategory_${id}" class="categoryDelete bi bi-x-lg ml-3" style="cursor: pointer"></i>
-    </a>`;
+    const generateCategory = (id) => {
+            return `
+                <div class="row justify-content-between align-items-center">
+                    <span class="col-sm-11">
+                        <input id="cetagoryId_${id}" type="hidden" name="categories[${id}].Id" value="-1"/>
+                        <input id="categoryName_${id}" type="text" class="form-control" name="categories[${id}].Name" placeholder="Новая категория"/> 
+                    </span>
+    
+                    <i id="categoryDelete_${id}" class="bi bi-x-lg mr-2" style="cursor: pointer"></i>
+                </div>
+                   `;
     }
+    
+    const generateProjectMember = (id) => {
+            return  `
+                <div class="row justify-content-between align-items-center">
+                    <input id="projectMemberId_${id}" type="hidden" name="projectMembers[${id}].Id" value="-1"/>
+                    <input id="projectMemberName_${id}" type="text" class="form-control col-sm-5 ml-3 mr-2" name="projectMembers[${id}].NameInProject" placeholder="Имя"/>
+                    <input id="projectMemberEmail_${id}" type="text" class="form-control col-sm-5 mr-2" name="projectMembers[${id}].User.Email" placeholder="Email"/>
 
-    const generateProjectMember = (id,name,email) => {
-    return  `<a id="projectMember-${id}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-    <span class="flex-grow-1 row ">
-    <input asp-for="${name}" class="form-control col-lg-5 mr-2" value="${name}"/>
-    <input asp-for="${email}" class="form-control col-lg-6" value="${email}"/>
-    </span>
-
-    <i id="${id}" class="projectMemberDelete bi bi-x-lg ml-3" style="cursor: pointer"></i>
-    </a>`;
-
-
+    
+                    <i id="projectMemberDelete_${id}" class="bi bi-x-lg mr-2" style="cursor: pointer"></i>
+                </div>`;
     }
-
+    
     $(document).ready(function () {
-    var i = 6;
-    $(".addCategory").click(function (e) {
-    e.preventDefault();
-    let list = document.querySelector('#categoryList');
-    id = i++;
-    var name = id;
-
-    var div = document.createElement('div');
-    div.innerHTML = generateCategory(id,name);
-    list.insertBefore(div,list.firstElementChild);
-
-    $("#deleteCategory_" + id).click(function (e) {
-    e.preventDefault();
-    $("#category_" + id).remove();
-    });
-    });
-
-    $(".addProjectMember").click(function (e) {
-    e.preventDefault();
-    let list = document.querySelector('#projectMemberList');
-
-    var id = "-1";
-    var name = "Not unique! id = " + id;
-    var email = "email";
-
-    var div = document.createElement('div');
-    div.innerHTML = generateProjectMember(id,name,email);
-    list.insertBefore(div,list.firstElementChild);
-
-    $(".projectMemberDelete").click(function (e) {
-    e.preventDefault();
-    $("#projectMember-" + this.id).remove();
-    });
-    });
-
-    $("#deleteCategory").click(function (e) {
-    e.preventDefault();
-    $("#category_" + this.id).remove();
-    });
-
-    $(".projectMemberDelete").click(function (e) {
-    e.preventDefault();
-    $("#projectMember-" + this.id).remove();
-    });
+        
+        let categoryList = document.querySelector('#categoryList');
+        let projectMemberList = document.querySelector('#projectMemberList');
+        var cat_id = categoryList.getAttribute("count");
+        var pm_id =  projectMemberList.getAttribute("count");
+    
+    
+        //-- Category --
+    
+        $(".categoryDelete").click(function (e) {
+            e.preventDefault();
+            $("#category_" + this.id).fadeOut(500);
+            setTimeout(function(){
+                $("#categoryName_" + id).val("deleted");
+            }, 500); 
+        });
+    
+        $(".addCategory").click(function (e) {
+            e.preventDefault();
+            var id = cat_id++;
+    
+            var div = document.createElement('div');
+            div.innerHTML = generateCategory(id);
+            div.classList.add('list-group-item','list-group-item-action');
+            div.setAttribute('id','category_' + id);
+            categoryList.insertBefore(div,categoryList.firstElementChild);
+            $("#category_" + id).hide().show(500);
+    
+    
+            $("#categoryDelete_" + id).click(function (e) {
+                e.preventDefault();
+                $("#category_" + id).fadeOut(500);
+                setTimeout(function(){
+                    $("#categoryName_" + id).val("deleted");
+                }, 500);                 
+            });
+        });
+    
+        
+        //--!
+    
+    
+        //-- ProjectMember --       
+    
+        $(".projectMemberDelete").click(function (e) {
+            e.preventDefault();
+            $("#projectMember_" + this.id).fadeOut(500);
+            setTimeout(function(){
+                $("#projectMemberName_" + id).val("deleted");
+            }, 500);    
+        });
+    
+    
+        $(".addProjectMember").click(function (e) {
+            e.preventDefault();
+            var id = pm_id++;
+    
+            var div = document.createElement('div');
+            div.innerHTML = generateProjectMember(id);
+            div.classList.add('list-group-item','list-group-item-action');
+            div.setAttribute('id','projectMember_' + id);
+            projectMemberList.insertBefore(div,projectMemberList.firstElementChild);
+            $("#projectMember_" + id).hide().show(500);
+    
+            $("#projectMemberDelete_" + id).click(function (e) {
+                e.preventDefault();
+                $("#projectMember_" + id).fadeOut(500);                
+                setTimeout(function(){
+                    $("#projectMemberName_" + id).val("deleted");
+                }, 500);  
+            });
+        });
+    
+    
+        //--!
     });
 </script>
-    }
+}
